--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - echo pre_build
   build:
     commands:
-      - mvn package
+      - mvn clean package
       - echo build
   post_build:
     commands:
